--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,13 +1,23 @@
-@import url("https://fonts.googleapis.com/css?family=Dancing+Script|Courgette|Niconne|Crimson+Text|Cookie");
-html {
+// Framework
+@import 'bulma';
+
+// Light Gallery Base Styling
+@import 'lightgallery';
+// Light Gallery Animations
+@import 'lg-transitions';
+
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Courgette|Niconne|Crimson+Text|Cookie');
+
+html{
   background: #352001;
 }
 
-.column {
+.column{
+  // border: 1px white solid;
   margin-bottom: 25px;
 }
 
-h1 {
+h1{
   font-size: 5em;
   color: #EBCF7F;
   text-align: center;
@@ -15,7 +25,7 @@ h1 {
   text-shadow: 3px 3px #9E6439;
 }
 
-h3 {
+h3{
   font-family: 'Courgette', cursive;
   font-size: 2.25em;
   color: #EBCF7F;
@@ -24,14 +34,14 @@ h3 {
   text-align: center;
 }
 
-p {
+p{
   font-size: 1.2em;
   padding: 6px;
   color: #FDF4C0;
   font-family: 'Crimson Text', serif;
 }
 
-blockquote {
+blockquote{
   font-size: 1.5em;
   color: #EBCF7F;
   padding: 5px 0 16px 0;
@@ -40,7 +50,7 @@ blockquote {
   line-height: 90%;
 }
 
-img {
-  border-radius: 3%;
-  border: 3px #654025 solid;
-}
+//img{
+//  border-radius: 3%;
+//  border: 3px #654025 solid;
+//}
