--- a/css/styles.scss
+++ b/css/styles.scss
@@ -54,3 +54,9 @@ blockquote{
 //  border-radius: 3%;
 //  border: 3px #654025 solid;
 //}
+
+.column-is-3 a{
+    font-family: 'Courgette', cursive;
+    color: #FDF4C0;
+    font-size: 1.1em;
+}
