--- a/css/styles.processed.css
+++ b/css/styles.processed.css
@@ -25,10 +25,11 @@
 
 
 
-
-
-
-
+.titlebar{
+    font-size: 1em;
+    line-height: 1.25em;
+    text-align: center;
+}
 
 
 
@@ -169,7 +170,7 @@ body {
 }
 
 a {
-  color: #3273dc;
+  color: #EBCF7F;
   cursor: pointer;
   text-decoration: none;
 }
@@ -179,8 +180,9 @@ a strong {
 }
 
 a:hover {
-  color: #363636;
+  color: #ccc;
 }
+
 
 code {
   background-color: whitesmoke;
