--- a/css/styles.processed.css
+++ b/css/styles.processed.css
@@ -11316,7 +11316,7 @@ print {
   position: absolute;
   top: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.45);
+  background-color: #9E6439;
 }
 
 .lg-toolbar .lg-icon {
@@ -11430,7 +11430,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .lg-outer .lg-thumb-outer {
-  background-color: #0D0A0A;
+  background-color: rgba(206,153,67, .75);
   bottom: 0;
   position: absolute;
   width: 100%;
@@ -12122,6 +12122,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   right: 0;
   top: 0;
   bottom: 0;
+  background: #352001;
 }
 
 .lg-outer .lg-item.lg-complete {
