--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,6 +21,7 @@ html{
     font-size: 1em;
     line-height: 1.25em;
     text-align: center;
+    margin-top: 10px;
 }
 
 .column is-12{
@@ -42,6 +43,7 @@ h3{
   font-weight: 700;
   text-shadow: 0px 0px 8px #503C30;
   text-align: center;
+  padding-top: 25px;
 }
 
 p{
